# linux-highperf-proxy

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docs_deploy.md  package-lock.json  package.json  project.txt  wrangler.toml
bench_out/: remote_conn_hold_10k.json  remote_http_stats.json
benchmarks/: bench_10k_connect.json  bench_10k_connect_timeout5.json  bench_competitor_results.json  bench_competitor_results_c200.json  bench_competitor_results_c50.json  bench_competitor_results_c500.json  bench_conn_hold.json  bench_iperf_tb_via_proxy.json  bench_latency_epoll.json  bench_latency_epoll_20k.json  bench_latency_epoll_20k_c10.json  bench_latency_epoll_20k_c20.json  bench_latency_epoll_20k_cached.json  bench_latency_epoll_20k_threads4.json  bench_results.json  bench_results_all.json  bench_tb_direct.json  bench_tb_direct_p16.json  bench_tb_via_proxy.json  bench_tb_via_proxy_bp.json  bench_tb_via_proxy_bp2.json  bench_tb_via_proxy_bp_p16.json  bench_tb_via_proxy_gcp_20260110.json  bench_tb_via_proxy_gcp_20260110_cpu.json  bench_tb_via_proxy_t8_p16.json  bench_tb_via_proxy_t8_p8.json  bench_throughput.json  bench_throughput2.json
config/: ai_demo.conf  bench.conf  bench_lat.conf  demo.conf  proxy.conf  test_l7.conf  test_ratelimit.conf  test_stats.conf
docs/: algorithms.md  api.md  architecture.md  competitor_benchmark.md  config.md  dashboard_showcase.md  demo.md  docker.md  docsite_deploy.md  index.md  install.md  monitoring.md  openapi.md  openapi.yaml  performance.md  resource_analysis.md  scale_out.md  troubleshooting.md  use_cases.md
docs/.vitepress/: config.mts
docs/spec/: openapi.yaml
include/proxy/: ProxyServer.h  ProxySessionContext.h
include/proxy/balancer/: AiServiceChecker.h  BackendConnectionPool.h  BackendManager.h  BackendSession.h  Balancer.h  ConsistentHashBalancer.h  GpuAwareBalancer.h  HealthChecker.h  HttpHealthChecker.h  LeastConnectionsBalancer.h  LeastQueueBalancer.h  ResponseTimeWeightedBalancer.h  RoundRobinBalancer.h  ScriptHealthChecker.h  ServiceDiscovery.h  TcpHealthChecker.h  WarmupChecker.h
include/proxy/common/: Allocator.h  BuddyAllocator.h  Config.h  Logger.h  MemoryPool.h  PluginApi.h  PluginManager.h  SlabAllocator.h  noncopyable.h
include/proxy/monitor/: AccessControl.h  AlertManager.h  AuditLogger.h  CongestionControl.h  HistoryStore.h  PerKeyConnectionLimiter.h  PerKeyRateLimiter.h  Stats.h  TokenBucket.h
include/proxy/network/: Acceptor.h  Buffer.h  Callbacks.h  Channel.h  Connector.h  EpollPoller.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  InetAddress.h  PollPoller.h  Poller.h  SelectPoller.h  Socket.h  TcpClient.h  TcpConnection.h  TcpServer.h  TlsContext.h  UdpProxyServer.h  UringPoller.h
notebooks/: all_modules_tests.ipynb  module_A_network_tests.ipynb  module_B_balancer_tests.ipynb  module_C_protocol_tests.ipynb  module_D_monitor_security_tests.ipynb  rtx_remote_bench.ipynb
plugins/: example_plugin.cpp
scripts/: acme.py  ai_demo.py  bench_competitor.py  benchmark.py  demo.py  load_test.py  manage.py  mock_ai_backend.py  run_tests.py
src/: ProxyServer.cpp  main.cpp
src/balancer/: AiServiceChecker.cpp  BackendConnectionPool.cpp  BackendManager.cpp  BackendSession.cpp  ConsistentHashBalancer.cpp  GpuAwareBalancer.cpp  HttpHealthChecker.cpp  LeastConnectionsBalancer.cpp  LeastQueueBalancer.cpp  ResponseTimeWeightedBalancer.cpp  RoundRobinBalancer.cpp  ScriptHealthChecker.cpp  ServiceDiscovery.cpp  TcpHealthChecker.cpp  WarmupChecker.cpp
src/common/: BuddyAllocator.cpp  Config.cpp  Logger.cpp  MemoryPool.cpp  PluginManager.cpp  SlabAllocator.cpp
src/monitor/: AccessControl.cpp  AlertManager.cpp  AuditLogger.cpp  CongestionControl.cpp  HistoryStore.cpp  PerKeyConnectionLimiter.cpp  PerKeyRateLimiter.cpp  Stats.cpp  TokenBucket.cpp
src/network/: Acceptor.cpp  Buffer.cpp  Channel.cpp  Connector.cpp  EpollPoller.cpp  EventLoop.cpp  EventLoopThread.cpp  EventLoopThreadPool.cpp  InetAddress.cpp  PollPoller.cpp  Poller.cpp  SelectPoller.cpp  Socket.cpp  TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp  TlsContext.cpp  UdpProxyServer.cpp  UringPoller.cpp
src/protocol/: Cache.cpp  Compression.cpp  Cookie.cpp  GrpcFramer.cpp  Hpack.cpp  Http2Connection.cpp  HttpBatcher.cpp  HttpContext.cpp  HttpResponseContext.cpp  HttpServer.cpp  ProtobufLite.cpp  RewriteRules.cpp  TrafficMirror.cpp
tests/integration/: test_alert_anomaly.cpp  test_alert_channels.cpp  test_alert_webhook.cpp  test_api_aggregate.cpp  test_backend_conn_pool.cpp  test_batch_split.cpp  test_cache_memcached.cpp  test_cache_redis.cpp  test_compression_conversion.cpp  test_config_as_code.cpp  test_config_web.cpp  test_conn_limit.cpp  test_conn_limit_user_service.cpp  test_connector_retry.cpp  test_dashboard.cpp  test_ddos_accept_limit.cpp  test_diagnostics.cpp  test_dynamic_register.cpp  test_edf.cpp  test_fair_queue.cpp  test_grpc_h2c.cpp  test_history.cpp  test_http2_basic.cpp  test_http_batching.cpp  test_http_keepalive_chunked.cpp  test_httpserver.cpp  test_idle_cleanup.cpp  test_l4_tunnel.cpp  test_model_version_routing.cpp  test_multithread.cpp  test_per_path_rate_limit.cpp  test_plugin_http.cpp  test_priority_queue.cpp  test_protocol_conversion.cpp  test_rewrite_rules.cpp  test_service_discovery.cpp  test_streaming_response.cpp  test_tcpclient.cpp  test_tcpserver.cpp  test_tls_acme.cpp  (+3 more)
tests/unit/: test_access_control.cpp  test_ai_service_check.cpp  test_allocator.cpp  test_audit_logger.cpp  test_backend_manager.cpp  test_balancer.cpp  test_balancer_health.cpp  test_buddy_allocator.cpp  test_congestion_control.cpp  test_cookie.cpp  test_eventloop.cpp  test_gpu_balancer.cpp  test_http.cpp  test_http_health_checker.cpp  test_hugepage_slab.cpp  test_leastconn.cpp  test_leastqueue.cpp  test_memory_stats.cpp  test_model_affinity.cpp  test_passive_failover.cpp  test_per_ip_rate_limit.cpp  test_plugin_manager.cpp  test_rtw.cpp  test_script_health_checker.cpp  test_select_poller.cpp  test_stats_backends.cpp  test_stats_json.cpp  test_token_bucket.cpp  test_warmup.cpp
workers/: serve_assets.ts
(+16 files in other folders)
